# ori-guided

./: .env.example  .gitignore  IMPLEMENTATION.md  README.md  eslint.config.js  index.html  package-lock.json  package.json
.github/workflows/: deploy-backend.yml  deploy-frontend.yml  deploy.yml  release.yml
public/: CNAME
server/: .env.example  README.md  db.sqlite3  manage.py  pyproject.toml  requirements.txt  vercel.json
server/apps/accounts/: models.py  urls.py  views.py
server/apps/accounts/migrations/: 0001_initial.py
server/apps/history/: models.py  serializers.py  urls.py  views.py
server/apps/history/migrations/: 0001_initial.py
server/apps/llm/: client.py  prompts.py  serializers.py  urls.py  views.py
server/config/: settings.py  urls.py
src/: App.css  App.tsx  index.css  vite-env.d.ts
src/components/: APIKeySetup.css  APIKeySetup.tsx  AuthScreen.css  AuthScreen.tsx  BreathingExercise.css  BreathingExercise.tsx  CheckInStep.css  CheckInStep.tsx  CognitiveReframe.css  CognitiveReframe.tsx  FollowUpStep.css  FollowUpStep.tsx  GroundingExercise.css  GroundingExercise.tsx  HistoryScreen.css  HistoryScreen.tsx  JournalingPrompt.css  JournalingPrompt.tsx  MentalRehearse.css  MentalRehearse.tsx  MovementReset.css  MovementReset.tsx  OriMessage.tsx  PrescriptionCard.css  PrescriptionCard.tsx  ProgressBar.css  ProgressBar.tsx  ReflectionStep.css  ReflectionStep.tsx  TypingIndicator.css  TypingIndicator.tsx  VitalSignsStep.css  VitalSignsStep.tsx  WelcomeScreen.css  WelcomeScreen.tsx
src/services/: auth.ts  llm.ts  prompts.ts
src/types/: index.ts
(+1 files in other folders)
