[project]
name = "ori-guided-server"
version = "0.1.0"
description = "Django + DRF backend for ori-guided (v2.1: server-held LLM keys)."
requires-python = ">=3.11"
dependencies = [
    "Django>=5.0,<6",
    "djangorestframework>=3.15",
    "django-cors-headers>=4.3",
    "openai>=1.40",
    "python-dotenv>=1.0",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["config", "apps", "apps.llm"]
